Minor modal edits

--- a/CarPoolSite/Index.html
+++ b/CarPoolSite/Index.html
@@ -56,18 +56,21 @@
                 <label class="login" for="psw"><b>Password</b></label>
                 <input class="login" type="password" placeholder="Enter Password" name="psw" required>
 
+                <label class="login" for="psw"><b>Confirm Password</b></label>
+                <input class="login" type="password" placeholder="Enter Password" name="psw" required>
+
                 <label class="login"> Forename: </label>
-                <input class="login" type="text" name="forename" placeholder="Enter Forename" />
+                <input class="login" type="text" name="forename" placeholder="Enter Forename" required/>
                 <label class="login"> Surname: </label>
-                <input class="login" type="text" name="surname" placeholder="Enter Surname" />
+                <input class="login" type="text" name="surname" placeholder="Enter Surname" required/>
                 <label class="login">Gender: </label>
-                <select class="login" id="gender">
+                <select class="login" name="gender">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                     <option value="other">Other</option>
                 </select> <br />
                 <button type="submit">Next</button>
-               
+
             </div>
 
            
