--- a/CarPoolSite/Index.html
+++ b/CarPoolSite/Index.html
@@ -43,7 +43,7 @@
 
     <div id="id02" class="modal">
 
-        <form class="modal-content animate" action="/action_page.php" method="post">
+        <form class="modal-content animate" action="Register.aspx" method="post">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
                 <h1> Register </h1>
