--- a/CarPoolSite/Index.html
+++ b/CarPoolSite/Index.html
@@ -43,7 +43,7 @@
 
     <div id="id02" class="modal">
 
-        <form class="modal-content animate" action="Register.aspx" method="post">
+        <form class="modal-content animate" action="SignUp.aspx" method="post">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
                 <h1> Register </h1>
@@ -57,7 +57,7 @@
                 <input class="login" type="password" placeholder="Enter Password" name="psw" required>
 
                 <label class="login" for="psw"><b>Confirm Password</b></label>
-                <input class="login" type="password" placeholder="Enter Password" name="psw" required>
+                <input class="login" type="password" placeholder="Enter Password" name="psw2" required>
 
                 <label class="login"> Forename: </label>
                 <input class="login" type="text" name="forename" placeholder="Enter Forename" required/>
